# word-of-the-day-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
